--- a/style/style.css
+++ b/style/style.css
@@ -44,12 +44,129 @@ nav li a{
 
 .header{
     background-color: #FFF8F3;
+    background-image: url(../assets/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .profile-picture{
     width: 500px;
+}
+.gretting-text{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+.banner-content{
+    max-width: 500px;
+}
+.banner-paragraph{
+    margin-bottom: 40px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+main section{
+    margin-top: 130px;
+}
+.about{
+    padding: 130px;
+    background-color: #FFF8F3;
+    margin: 130px 0px ;
+}
+.section-title{
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.section-description{
+    color: #757575;
+    font-size: 18px;
+    text-align: center;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+.what-i-do-description{
+    padding: 30px 150px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+
+    border: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.resume-column-title{
+    font-size: 30;
+    font-weight: 700;
+    color: #474747;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-institutue,.resume-item-description{
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-iteam-title{
+    color: #474747;
+    size: 25px;
+    width: 700;
+    margin-top: 10px;
+}
+.download-resume{
+    text-align: center;
+    margin-top: 50px;
+}
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+    gap: 50px;
+}
+
+.footer-column{
+    width: 50%;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    border: 0;
+    background-color: #FFF;
+    width: 100%;
+}
+.social-link a{
+    margin-right: 25px;
 }
